// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders Page content 1`] = `
<p>
  Loading...
</p>
`;

exports[`Page renders Page content 2`] = `
Array [
  <h2
    className="page-title"
  >
    Page One
  </h2>,
  <p>
    Description: 
    List of users from UK
  </p>,
  <table
    className="users-table"
  >
    <thead>
      <tr>
        <th
          className="table-header"
        >
          Name
        </th>
        <th
          className="table-header"
        >
          Email
        </th>
        <th
          className="table-header"
        >
          Location
        </th>
        <th
          className="table-header"
        >
          Online
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="user-content "
        >
          <img
            alt="avatar"
            className="user-img"
            src="https://source.unsplash.com/random/10x10"
          />
          John Moe
        </td>
        <td
          className="user-content "
        >
          <a
            href="mailto:john_moe@email.com"
          >
            john_moe@email.com
          </a>
        </td>
        <td
          className="user-content "
        >
          London
        </td>
        <td
          className="user-content user-online"
        />
      </tr>
      <tr>
        <td
          className="user-content "
        >
          <img
            alt="avatar"
            className="user-img"
            src="https://source.unsplash.com/random/10x10"
          />
          Jane Doe
        </td>
        <td
          className="user-content "
        >
          <a
            href="mailto:jane_doe@email.com"
          >
            jane_doe@email.com
          </a>
        </td>
        <td
          className="user-content "
        >
          London
        </td>
        <td
          className="user-content user-online"
        />
      </tr>
      <tr>
        <td
          className="user-content "
        >
          <img
            alt="avatar"
            className="user-img"
            src="https://source.unsplash.com/random/10x10"
          />
          Mike Smith
        </td>
        <td
          className="user-content "
        >
          <a
            href="mailto:mike_smith@email.com"
          >
            mike_smith@email.com
          </a>
        </td>
        <td
          className="user-content "
        >
          Brighton
        </td>
        <td
          className="user-content user-online"
        >
          <svg
            className="svg-icon"
            viewBox="0 0 20 20"
          >
            <path
              d="M10.219,1.688c-4.471,0-8.094,3.623-8.094,8.094s3.623,8.094,8.094,8.094s8.094-3.623,8.094-8.094S14.689,1.688,10.219,1.688 M10.219,17.022c-3.994,0-7.242-3.247-7.242-7.241c0-3.994,3.248-7.242,7.242-7.242c3.994,0,7.241,3.248,7.241,7.242C17.46,13.775,14.213,17.022,10.219,17.022 M15.099,7.03c-0.167-0.167-0.438-0.167-0.604,0.002L9.062,12.48l-2.269-2.277c-0.166-0.167-0.437-0.167-0.603,0c-0.166,0.166-0.168,0.437-0.002,0.603l2.573,2.578c0.079,0.08,0.188,0.125,0.3,0.125s0.222-0.045,0.303-0.125l5.736-5.751C15.268,7.466,15.265,7.196,15.099,7.03"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Page renders error message 1`] = `
<p>
  Loading...
</p>
`;

exports[`Page renders error message 2`] = `
<p>
  Error retrieving data from the server.
</p>
`;

exports[`Page renders loading state initially 1`] = `
<p>
  Loading...
</p>
`;
